--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,18 @@
 .home-nav > h1{
   font-size: 40px;
 }
+.trends{
+  width: 700px;
+  display: flex;
+  padding: 30px;
+  border: 5px solid rgb(93, 115, 238);
+  margin: 20px;
+  border-radius: 25px;
+  background-image: linear-gradient(to right bottom, rgb(248, 249, 255), rgb(232, 232, 250));
+}
+.trends > img {
+  width: 400px;
+  height: 300px;
+  padding-left: 30px;
+  border-radius: 15px;
+}
