--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,25 @@
   padding-left: 30px;
   border-radius: 15px;
 }
+
+.trending{
+  display: flex;
+  align-items: center;
+}
+
+.trending > h5{
+  padding-left: 20px;
+  font-size: 20px;
+}
+.space{
+  width: 500px;
+  height: 300px;
+  padding: 20px;
+  border: 5px solid black;
+  background-color: rgb(203, 203, 252);
+}
+.centre{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
