--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,21 @@
   justify-content: center;
   margin-top: 100px;
 }
+
+.about{
+  background-color: rgb(181, 181, 253);
+  height: 100vh;
+}
+.header4{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 22px;
+  padding: 20px;
+  width: 500px;
+  height: 250px;
+  border-radius: 100px 0px 0px 100px;
+  background-color: white;
+  text-align: center;
+  margin: 50px;
+}
