--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,31 @@
   text-align: center;
   margin: 50px;
 }
+.trendlist{
+  background-color: rgb(232, 252, 252);
+  padding: 30px;
+}
+.small-inputs{
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+}
+.small-inputs > input{
+  width:250px;
+  height: 27px;
+  margin: 7px;
+}
+.form-container{
+  display: flex;
+  align-items: center;
+}
+.submit{
+  background-color: rgb(93, 104, 250);
+  border-radius: 10px;
+  width: 100px;
+  margin-left: 50px;
+  height: 40px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
