--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,42 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.container{
+  background-image: url(https://images.pexels.com/photos/1416530/pexels-photo-1416530.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+}
+
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contact > h2{
+  margin-top: 100px;
+}
+.float-image{
+  display: flex;
+}
+.float-image >img{
+  height: 500px;
+  width: 500px;
+}
+.header6{
+  color: white;
+  background-color: rgb(68, 67, 67);
+  width: 200px;
+  font-size: 20px;
+  padding: 10px;
+}
+.update{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 50px;
+}
