--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,16 @@
   justify-content: center;
   margin-left: 50px;
 }
+.add-trend{
+  background-color: rgb(108, 117, 250);
+  width: 130px;
+  height: 50px;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
