--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,19 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.nav{
+  background-color: rgb(56, 56, 56);
+  width: 100%;
+  height: 80px;
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+
+}
+.nav-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2px;
+  margin-top: 0px;
+}
