--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,11 @@
   background-image: url(./image1.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  /* height: 100vh; */
   background-size: cover;
+}
+#myI{
+  width: 50px;
 }
 .home{
   color: white;
@@ -16,7 +19,7 @@
 }
 .home > h4{
   float: right;
-  width: 300px;
+  width: 400px;
   margin-right: 50px;
   font-size: 35px;
 }
@@ -78,7 +81,7 @@
   flex-direction: column;
   font-size: 22px;
   padding: 20px;
-  width: 500px;
+  min-width: 200px;
   height: 250px;
   border-radius: 100px 0px 0px 100px;
   background-color: white;
@@ -167,7 +170,7 @@
 }
 
 .nav{
-  background-color: rgb(56, 56, 56);
+  background-color: rgb(216, 214, 214);
   width: 100%;
   height: 80px;
   padding-top: 40px;
